gke-ingress/apple.yaml
kind: Pod
apiVersion: v1
metadata:
  name: apple-app
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"

---

kind: Service
apiVersion: v1
metadata:
  name: apple-service
  cloud.google.com/backend-config: '{"ports": {"5678":"production-backend-config"}}'
spec:
  selector:
    app: apple
  ports:
    - port: 5678
