gke-ingress/nginx-default.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: proxy
spec:
  containers:
  - name: nginx
    image: nginx:stable
    ports:
      - containerPort: 80
        name: http-web-svc

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  cloud.google.com/backend-config: '{"ports": {"80":"production-backend-config"}}'
  cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app.kubernetes.io/name: proxy
  ports:
  - name: default
    protocol: TCP
    port: 80
    targetPort: http-web-svc
