gke-ingress/name-based-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-based-ingress
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: tls-1-2-policy
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
spec:
  rules:
  - host: apple.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: apple-service
            port:
              number: 5678
  - host: banana.com
    http:
      paths:
        pathType: Prefix
        path: "/"
        backend:
          service:
            name: banana-service
            port:
              number: 5678
  - http:
    paths:
    - pathType: Prefix
      path: "/"
      backend:
        service:
          name: nginx-service
          port:
            number: 80
